@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.127 2004/12/16 23:13:24 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.128 2004/12/17 21:06:36 wolf31o2 Exp $
+
+  17 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript/x86-archscript.sh:
+  Added -no-emul-boot back into x86-archscript.sh as apparently isolinux will
+  not work without it (mkisofs fails on creating ISO).
 
   16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   modules/catalyst_support.py, modules/embedded_target.py,
